# models-for-relational-multimodal-data

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  .pylintrc  LICENSE  README.md  benchmark.ipynb  benchmark.py  bert_mask.py  cagri-test.py  cagri_train.py  cagri_utils.py  d.ipynb  downstream_model_LLM.py  dummy.py  environment.yml  finetune_LLM.py  fttransformer.py  fused.ipynb  fused.py  fused_ft_transformer_pna.py  fused_head.py  fused_mcm_mv_lp.py  fused_sweep.py  link_prediction.ipynb  link_prediction.py  link_prediction_ft_transformer_pna.py  link_prediction_pna.py  mac_env.yml  main.py  mask_prediction.ipynb  mask_prediction.py  mask_strategy_comparison.py  mask_type_comparison_fused.py  new.py  new2.py  node_classification.py  one_step.py  pna.py  (+23 more)
data/: AML.ipynb  Over-Sampled_Tiny_Trans-c.csv  amazon-review-v2.ipynb  aml-data  cora.ipynb  download_eth_transactions.py  elliptic_bitcoin_dataset.ipynb  eth_phishing_transactions.ipynb  ogbn-arxiv.ipynb  ogbn-review.ipynb  prepare_AML_transactions.py  rel-hm.ipynb  rel-hm.py  snap.ipynb
datasets/: dummy.ipynb  ibm_transactions_for_aml.py
gnn/: .model.py.swp
models/: ft_transformer.py
saved_models/self-supervised/: run_556spcwg_epoch_1.pth  run_556spcwg_epoch_2.pth
slurm/bench/: bench-v.sh  bench.sh
slurm/fashion/: fashion.sh  fashion_nrows10000_bs128_bsemb5_bstok20000_epochs100_finetunetrue.sh  (+4 more)
src/: __init__.py
src/primitives/negative_sampling/: CMakeLists.txt  __init__.py  edge_index.json  negative_sampling.cpp  pos_edge_index.json  test.py
test/: ft_transformer.py  fused.ipynb  ibm.py
(+81 files in other folders)
